# badgepy

./: .git-blame-ignore-revs  .gitignore  README.md  build_golden_images.py  noxfile.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  release-drafter.yml  release.yml
badgepy/: __init__.py  __main__.py  output.py  pil_text_measurer.py  precalculate_text.py  precalculated_text_measurer.py  presets.py  text_measurer.py  version.py
badgepy/parsers/: __init__.py  coverage.py  generic.py  junit.py
docs/: ci-integration.md  shields-migration.md
pybadges/: __init__.py  imghdr.py  pil_text_measurer.py  precalculated_text_measurer.py
server-example/: README.md  app.py  requirements.txt  test_app.py
server-example/templates/: index.html
tests/: image_server.py  test-badges.json  test-results.xml  test_badgepy.py  test_parsers.py  test_precalculated_text_measurer.py  test_presets.py  test_pybadges.py
