[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "badgepy"
description = "A library and command-line tool for generating Github-style badges"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
license = { file = "LICENSE" }
authors = [
    { name = "Brian Quinlan", email = "brian@sweetapp.com" },
    { name = "Xianpeng Shen", email = "xianpeng.shen@gmail.com" }
]
keywords = ["github", "gh-badges", "badge", "shield", "status"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent"
]
dependencies = [
    "Jinja2>=3,<4",
    "requests>=2.22.0,<3",
    "filetype>=1.2.0,<2.0.0"
]

[project.optional-dependencies]
pil-measurement = [
    "Pillow>=6,<12"
]
dev = [
    "Flask>=2.0",
    "fonttools>=3.26",
    "nox",
    "Pillow>=5",
    "pytest>=3.6",
    "xmldiff>=2.4"
]

[project.urls]
source = "https://github.com/shenxianpeng/badgepy"
tracker = "https://github.com/shenxianpeng/badgepy/issues"

[project.scripts]
badgepy = "badgepy.__main__:main"

[tool.setuptools]
packages = ["badgepy", "badgepy.parsers"]

[tool.setuptools_scm]
# It would be nice to include the commit hash in the version, but that
# can't be done in a PEP 440-compatible way.
version_scheme= "no-guess-dev"
# Test PyPI does not support local versions.
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.setuptools.package-data]
badgepy = ["badge-template-full.svg", "default-widths.json", "py.typed"]